fix: overflow swiper

--- a/src/styles/components/_stages-of-construction.scss
+++ b/src/styles/components/_stages-of-construction.scss
@@ -195,7 +195,7 @@
 
 @media (max-width: 48em) {
   .stages-of-construction {
-    margin-left: 4rem;
+    padding-left: 4rem;
     width: 100%;
   
     // .stages-of-construction__navigation
